--- a/laravel-app/public/css/custom.css
+++ b/laravel-app/public/css/custom.css
@@ -1,3 +1,5 @@
+/* Homepage */
+
 .postContainer {
     width: 100%;
 
@@ -14,6 +16,7 @@
 
 .post {
     width: 85%;
+    margin: 0 0 1em 0;
 }
 
 .postHeader {
@@ -33,9 +36,16 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        gap: 1em;
+        gap: 0.3em;
         margin: 0.5em;
         width: fit-content;
+
+        a {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 0.2em;
+        }
     }
 
     img {
@@ -45,16 +55,25 @@
     }
 }
 
-.postImg {
-    width: 100%;
-    height: auto;
+.postBody {
+    .postImg {
+        max-width: 50%;
+        border-radius: 1em;
+        margin: 0 1em 0 1em;
+        border: 1px solid rgb(209 213 219 / var(--tw-border-opacity, 1))
+            /* #d1d5db */;
 
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: center;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+            border-radius: 1em;
+        }
     }
+    margin-bottom: 1em;
+    display: flex;
+    flex-direction: row;
 }
 
 .postContent {
@@ -64,5 +83,106 @@
     p {
         font-size: 1.2em;
         margin: 0.5em;
+    }
+}
+
+.postFooter {
+    display: flex;
+    flex-direction: row;
+    margin: 0 0.5em 0.5em 0.5em;
+    align-items: center;
+    justify-content: space-between;
+
+    a {
+        font-weight: bold;
+    }
+}
+
+.title {
+    font-size: 2em;
+    font-weight: bold;
+    margin: 1em 0 0.3em 0;
+}
+
+.subTitle {
+    font-size: 1.5em;
+    font-weight: bold;
+    margin: 0 0 0.2em 0;
+}
+
+/* FAQ */
+
+.faqDescription {
+    text-align: center;
+    font-size: 1.2em;
+}
+
+.categoryName {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+.faqDiv {
+    margin: 1em 0;
+}
+
+/* Show Post */
+
+.showPost {
+    width: 95%;
+    background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1)) /* #1f2937 */;
+    margin: 1em 0 0 0;
+    padding: 1em;
+    color: rgb(209 213 219 / var(--tw-text-opacity, 1)) /* #d1d5db */;
+    border-radius: 2em;
+}
+
+/* Show Profile */
+
+.profile {
+    width: 100%;
+}
+
+.profileContent {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+
+    div {
+        width: 50%;
+        color: rgb(209 213 219 / var(--tw-text-opacity, 1)) /* #d1d5db */;
+    }
+}
+
+/* Search Users */
+
+.searchResult {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: start;
+    width: 100%;
+
+    gap: 1em;
+
+    div {
+        a {
+            color: rgb(209 213 219 / var(--tw-text-opacity, 1)) /* #d1d5db */;
+        }
+    }
+}
+
+.searchImg {
+    width: 2em;
+    height: 2em;
+    border-radius: 50%;
+
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        object-position: center;
+        border-radius: 50%;
     }
 }
